Fixed the css issue on collapse / expand button due to the font tag

--- a/config/themes/default/css/main.css
+++ b/config/themes/default/css/main.css
@@ -20,7 +20,7 @@ background-repeat:repeat-x;
 min-width:550px;
 }
 
-body, h1, h2, h3, h4, h5, h6, h7, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, field, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, .standard_paragraph b {
+body, h1, h2, h3, h4, h5, h6, h7, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, field, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, .standard_paragraph b {
 /*color:#333;*/
 font-family:Arial, Helvetica, sans-serif;
 font-size:12px;
